--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="banner-content">
                     <h1>Simple, Beautiful and Amazing</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.</p>
-                    <button>Download</button>
-                    <button>Learn more</button>
+                    <button type="submit" class="button-one">Download</button>
+                    <button type="submit" class="button-two">Learn more</button>
                     <div class="banner-icon">
                         <p>Available on:</p>
                         <img src="images/banner-icon-j1.png" alt="">
@@ -51,6 +51,16 @@
             </div>
         </section>
         <!Banner End -->
+            <!Feature start -->
+                <section id="feature">
+                    <div class="container">
+                        <div class="feature-content">
+                            <h2>summarise the features</h2>
+                            <p>summarise what your product is all about </p>
+                        </div>
+                    </div>
+                </section>
+                <!Feature End -->
 </body>
 
 </html>
