--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Bazinger psd</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -38,29 +39,52 @@
         <section id="banner">
             <div class="container">
                 <div class="banner-content">
-                    <h1>Simple, Beautiful and Amazing</h1>
+                    <h1>Simple, Beautiful <span>and Amazing</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.</p>
                     <button type="submit" class="button-one">Download</button>
                     <button type="submit" class="button-two">Learn more</button>
                     <div class="banner-icon">
                         <p>Available on:</p>
-                        <img src="images/banner-icon-j1.png" alt="">
-                        <img src="images/banner-icon-2.png" alt="">
+                        <i class="fab fa-apple"></i>
+                        <i class="fas fa-robot"></i>
                     </div>
                 </div>
             </div>
         </section>
         <!Banner End -->
-            <!Feature start -->
-                <section id="feature">
-                    <div class="container">
-                        <div class="feature-content">
-                            <h2>summarise the features</h2>
-                            <p>summarise what your product is all about </p>
+            <!-- round box start -->
+            <section id="round-box">
+                <div class="container">
+                    <div class="section-title">
+                        <h2>summarise the features</h2>
+                        <p>summarise what your product is all about </p>
+                    </div>
+                    <div class="round-box-item">
+                        <div class="row">
+                            <div class="round-item">
+                                <i class="fas fa-layer-group"></i>
+                                <h3>ATTRACTIVE layout</h3>
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
+                            <div class="round-item">
+                                <i class="fas fa-mobile-alt"></i>
+                                <h3>fresh design</h3>
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
+                            <div class="round-item">
+                                <i class="far fa-comments"></i>
+                                <h3>multipurpose</h3>
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
+                            <div class="round-item">
+                                <i class="far fa-comment-alt"></i>
+                                <h3>east to customize</h3>
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
                         </div>
                     </div>
-                </section>
-                <!Feature End -->
+                </div>
+            </section>
 </body>
 
 </html>
