--- a/index.html
+++ b/index.html
@@ -85,6 +85,35 @@
                     </div>
                 </div>
             </section>
+            <!-- Gallery start -->
+            <section id="gallery">
+                <div class="container">
+                    <div class="section-title">
+                        <h3>show the gallary</h3>
+                        <p>summarise what your product is all about </p>
+                    </div>
+                    <div class="gallery-item">
+                        <div class="row">
+                            <div class="image">
+                                <img src="images/allu1.jpg" alt="">
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
+                            <div class="image">
+                                <img src="images/allu2.jpg" alt="">
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
+                            <div class="image">
+                                <img src="images/allu3.jpg" alt="">
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
+                            <div class="image">
+                                <img src="images/allu4.jpg" alt="">
+                                <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 </body>
 
 </html>
